--- a/css/style.css
+++ b/css/style.css
@@ -256,10 +256,41 @@
 
 	}
 	.owl-prev>span {
-		width: 1px;
-		height: 20px;
-		background-color: #82878a;
+		display: none;
 	}
+	.owl-prev {
+		position: relative;
+		}
+	.owl-prev:before {
+		content: "";
+		position: absolute;
+		width: 19px;
+		height: 19px;
+		top: 12px;
+		transform: rotate(-45deg);
+		border-top: 1px solid red;
+		border-left: 1px solid red;
+	}	
+	.owl-next>span {
+		display: none;
+	}
+	button {
+		outline: none;
+	}
+	.owl-next {
+		position: relative;
+		}
+	.owl-next:before {
+		content: "";
+		position: absolute;
+		width: 19px;
+		height: 19px;
+		top: 12px;
+		left: 3px;
+		transform: rotate(135deg);
+		border-top: 1px solid red;
+		border-left: 1px solid red;
+	}	
 	#our_fleet>h4 {
 		font-size: 40px;
 		font-family: 'gobold';
@@ -523,6 +554,22 @@
 		color: #9e171d;
 		font-size: 14px;
 		font-family: 'gobold';
+	}
+	#testimonial .owl-next {
+	 position: absolute;
+    top: -40%;
+    right: 26px;
+    width: 45px;
+    height: 45px;
+    border: 1px solid red;
+	}
+	#testimonial .owl-prev {
+	 position: absolute;
+    top: -40%;
+    right: 70px;
+    width: 45px;
+    height: 45px;
+    border: 1px solid red;
 	}
 	
 	/*connect*/
