--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,14 @@
 /*header*/
 header {
 	background: url(../img/background.png);
+	position: relative;
 }
 
 .navbar-brand {
 	padding: 76px 0 53px 0;
+	position: relative;
+	z-index: 2;
+
 }
 .in:before {
 	content: "";
@@ -25,6 +29,7 @@ header {
 	left: 0;
 	right: 0;
 	background: rgba(255, 0, 0, 0.5);
+	display: block;
 
 }
 .navbar-header {
@@ -38,12 +43,27 @@ header {
 	margin-top: 84.5px;
 	margin-right: 0;
 	padding-right: 0;
+	z-index: 2;
 }
 .navbar {
 	margin-bottom: 0;
 	padding-bottom: 20px;
 	position: static;
 }
+.navbar-toggle.collapsed+a>img+img {
+	display: none;
+}
+.navbar-toggle+a>img {
+	display: none;
+}
+.navbar-toggle.collapsed+a>img:nth-child(1) {
+	display: block;
+}
+.navbar-toggle+a>img:nth-child(2) {
+	display: block;
+	z-index: 2;
+}
+
 
 .navbar-collapse.collapse {
 	display: none!important;
@@ -464,7 +484,25 @@ h4:before {
 .item:hover .desc_item {
 	opacity: 0.85;
 }
-
+.owl-dots {
+	text-align: center;
+}
+#our_fleet .owl-dots > .owl-dot {
+	background: rgba(255, 0, 0, 0.5);
+	width: 20px;
+	height: 20px;
+	margin-right: 30px;
+	border-radius: 50%;
+	text-align: center;
+}
+#our_fleet .owl-dots > .owl-dot:last-child {
+	margin-right: 0;
+}
+@media screen and (max-width: 1090px) {
+	.owl-prev, .owl-next {
+		display: none;
+	}
+}
 
 /*form*/
 #form {
@@ -595,10 +633,15 @@ input[type="checkbox"]:checked+label:after {
 	top: 8px;
 	transform: rotate(45deg);
 }
+.dropdown-toggle {
+	position:  relative;
+}
 .dropdown-menu {
-	width: 100%;
+	width: calc(100% - 29px);
 	background: #161616;
 	border-radius: 0;
+	left: 15px;
+
 
 }
 input[type="text"] {
